--- a/MusicShop/Views/AdminWindow.xaml
+++ b/MusicShop/Views/AdminWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="ModeratorWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBox Text="Admin window"/>
     </Grid>
 </Window>
