--- a/MusicShop/Views/ClientWindow.xaml
+++ b/MusicShop/Views/ClientWindow.xaml
@@ -5,9 +5,101 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicShop.Views"
         mc:Ignorable="d"
-        Title="ClientWindow" Height="450" Width="800">
-    <Grid>
-        <TextBox Text="Client window"/>
+        Title="MusicStore" Height="750" Width="1200"
+        FontFamily="The Medic Demo"
+        WindowStartupLocation="CenterScreen">
+    <TabControl>
+        <TabItem>
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../Pictures/Images/tel1.png" Width="20"/>
+                    <TextBlock Margin="5 3">Store</TextBlock>
+                </StackPanel>
+            </TabItem.Header>
+                <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Background="AntiqueWhite">
+                    <TextBlock Text="Music Shop" HorizontalAlignment="Center" Margin="10" FontSize="28"/>
+                </Grid>
+                <ScrollViewer Grid.Column="1" Grid.Row="1" Background="#FFF1F1F1">
+                    <StackPanel Margin="20 20">
+                        <ItemsControl x:Name="ListViewPlats" ItemsSource="{Binding }">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <Border Margin="10" Width="110" Height="160">
+                                        <StackPanel>
+                                            <Border Width="100" Height="100" CornerRadius="5" Margin="5">
+                                                <Border.Effect>
+                                                    <DropShadowEffect ShadowDepth="1"/>
+                                                </Border.Effect>
+                                                <Border.Background>
+                                                    <ImageBrush ImageSource="{Binding AlbumImagePath}"/>
+                                                </Border.Background>
+                                            </Border>
+                                            <TextBlock Margin="5" Text="{Binding RealCost, StringFormat={}{0:C}}" FontSize="17" FontFamily="Franklin Gothic Medium"/>
+                                            <TextBlock Margin="5 0" Text="{Binding Name}" FontSize="15"/>
+                                            <TextBlock Margin="5 0" Text="{Binding Author}" FontSize="12"/>
+                                        </StackPanel>
+                                    </Border>
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <WrapPanel/>
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
+                    </StackPanel>
+                </ScrollViewer>
+                <DockPanel Grid.Row="0" Grid.Column="1" >
+                    <TextBlock DockPanel.Dock="Left" Text="Genres:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <ComboBox x:Name="genresList" DockPanel.Dock="Left" Margin="5 10" Width="150"/>
+            
+                    <TextBlock DockPanel.Dock="Left" Text="Authors:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <ComboBox x:Name="authorsList" DockPanel.Dock="Left" Margin="5 10" Width="150"/>
+            
+                    <TextBlock DockPanel.Dock="Left" Text="Plate:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+            
+                    <Button x:Name="searchButton" Content="Search" DockPanel.Dock="Right" Margin="0 12 10 12" Width="100" FontSize="20"/>
+            
+                    <TextBox x:Name="plateField"  Margin="5 7" VerticalAlignment="Center" FontSize="20"/>
+                </DockPanel>
+                <DockPanel Grid.Row="1" Grid.Column="0">
+                    <TextBlock DockPanel.Dock="Top" Text="Name:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <TextBox x:Name="plateName"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True"/>
+            
+                    <TextBlock DockPanel.Dock="Top" Text="Author:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <TextBox x:Name="plateAuthor"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True"/>
+            
+                    <TextBlock DockPanel.Dock="Top" Text="Publisher:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <TextBox x:Name="platePublisher"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True"/>
+            
+                    <TextBlock DockPanel.Dock="Top" Text="Price:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <TextBox x:Name="platePrice"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True" />
 
-    </Grid>
+                    <TextBlock DockPanel.Dock="Top" Text="Amount:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <TextBox x:Name="plateAmount"  Margin="5 7" FontSize="20" DockPanel.Dock="Top" IsReadOnly="True" />
+
+                    <TextBlock DockPanel.Dock="Top" Text="Tracks:" FontSize="20" VerticalAlignment="Center" Margin="5 0"/>
+                    <Button x:Name="buyButton" DockPanel.Dock="Bottom" Margin="5 10" Content="Buy" FontSize="20" BorderThickness="1"/>
+                    <ListBox x:Name="trackList" Margin="5 0"/>
+                </DockPanel>
+            </Grid>
+        </TabItem>
+        <TabItem>
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../Pictures/Images/dia.png" Width="20"/>
+                    <TextBlock Margin="3">Statistics</TextBlock>
+                </StackPanel>
+            </TabItem.Header>
+        </TabItem>
+    </TabControl>
 </Window>
