--- a/MusicShop/Resourses/ButtonStyleSheet.xaml
+++ b/MusicShop/Resourses/ButtonStyleSheet.xaml
@@ -14,14 +14,16 @@
 
     <Style TargetType="Button" x:Key="ButtonFont" BasedOn="{StaticResource baseFont}">
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontWeight" Value="Black"/>
-        <Setter Property="Background" Value="AliceBlue" />
+        <Setter Property="FontWeight" Value="DemiBold"/>
+        <Setter Property="Background" Value="#FFFFFFFF" />
     </Style>
     
     <Style TargetType="Button" x:Key="RoundButton" BasedOn="{StaticResource ButtonFont}">
         <Style.Resources>
             <Style TargetType="Border">
-                <Setter Property="CornerRadius" Value="12" />
+                <Setter Property="BorderBrush" Value= "#33000000"/>
+                <Setter Property="BorderThickness" Value="3" />
+                <Setter Property="CornerRadius" Value="15" />
             </Style>
         </Style.Resources>
     </Style>
