--- a/MusicShop/App.xaml
+++ b/MusicShop/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resourses\ButtonStyleSheet.xaml"/>
                 <ResourceDictionary Source="Resourses\TextBoxStyleSheet.xaml"/>
+                <ResourceDictionary Source="Resourses\RoundButtonSheet.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
