--- a/MusicShop/Views/AdminWindow.xaml
+++ b/MusicShop/Views/AdminWindow.xaml
@@ -1,12 +1,73 @@
-﻿<Window x:Class="MusicShop.Views.ModeratorWindow"
+﻿<Window x:Class="MusicShop.Views.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicShop.Views"
         mc:Ignorable="d"
-        Title="ModeratorWindow" Height="450" Width="800">
-    <Grid>
-        <TextBox Text="Admin window"/>
-    </Grid>
+        Title="ModeratorWindow" Height="750" Width="1200">
+    <TabControl>
+        <TabItem>
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../Pictures/Images/plate.png" Width="20"/>
+                    <TextBlock Margin="5 3">Plates</TextBlock>
+                </StackPanel>
+            </TabItem.Header>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="0.5*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Background="AntiqueWhite">
+                    <Image Source="../Pictures/Images/MusicShopLogo.png" Margin="5"/>
+                </Grid>
+                <GroupBox  Grid.Row="1" Grid.Column="0" VerticalAlignment="Top">
+                    <StackPanel>
+                    <TextBlock DockPanel.Dock="Left" Text="Author:" FontSize="20" Margin="5 0"/>
+                    <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding Genres}" DisplayMemberPath="Name" VerticalAlignment="Center" FontSize="20" SelectedItem="{Binding SelectedGenre}"/>
+
+                    <TextBlock DockPanel.Dock="Left" Text="Genre:" FontSize="20" Margin="5 0"/>
+                    <ComboBox x:Name="genresList"  Margin="5 10" ItemsSource="{Binding Genres}" DisplayMemberPath="Name"  FontSize="20" SelectedItem="{Binding SelectedGenre}"/>
+
+                    <Button x:Name="searchButton" Content="Search" DockPanel.Dock="Right" Margin="4" FontSize="20" Style="{DynamicResource RoundButtonTemplate}"/>
+                </StackPanel>
+                </GroupBox>
+                <GroupBox Grid.Column="1">
+                    <Label Content="Plates" FontSize="20" DockPanel.Dock="Top" VerticalAlignment="Bottom"/>
+                </GroupBox>
+                <GroupBox Grid.Row="1" Grid.Column="1" DataContext="{Binding SelectedPlate}">
+                    <DockPanel>
+                    <ListView x:Name="platesList"/>
+                </DockPanel>
+                </GroupBox>
+                <GroupBox Grid.Column="2">
+                    <Label Content="{Binding AdminName}"/>
+                </GroupBox>
+                <DockPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Top">
+                    <Button x:Name="addPlate" Content="Add plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"/>
+                    <Button x:Name="delPlate" Content="Delete plate" Style="{DynamicResource RoundButtonTemplate}"  DockPanel.Dock="Top"/>
+                    <Button x:Name="savePlate" Content="Save plate" Style="{DynamicResource RoundButtonTemplate}"  DockPanel.Dock="Top"/>
+                    <Image Source="../Pictures/Images/your_addHere.jpg"/>
+                </DockPanel>
+            </Grid>
+        </TabItem>
+        <TabItem>
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../Pictures/Images/client.jpg" Width="20"/>
+                    <TextBlock Margin="3">Clients</TextBlock>
+                </StackPanel>
+            </TabItem.Header>
+            <Grid>
+                
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
+
