--- a/MusicShop/Resourses/RoundButtonSheet.xaml
+++ b/MusicShop/Resourses/RoundButtonSheet.xaml
@@ -9,12 +9,22 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border CornerRadius="20" Background="{TemplateBinding Background}" BorderThickness="1">
+                    <Border CornerRadius="20" Background="{TemplateBinding Background}" BorderThickness="1" Name="border">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
                         </ContentPresenter>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="Red"></Setter>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="border" Property="BorderBrush" Value="Yellow"></Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        
     </Style>
+    
 </ResourceDictionary>
