--- a/MusicShop/Views/AdminWindow.xaml
+++ b/MusicShop/Views/AdminWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicShop.Views"
+        xmlns:vm1="clr-namespace.ViewModels;assembly=BizLibrary"
         mc:Ignorable="d"
-        Title="ModeratorWindow" Height="750" Width="1200">
+        Title="Admin" Height="750" Width="1200" MinHeight="500" MinWidth="700">
     <TabControl>
         <TabItem>
             <TabItem.Header>
@@ -20,20 +21,18 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="250"/>
+                    <ColumnDefinition Width="0.4*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="0.5*"/>
                 </Grid.ColumnDefinitions>
                 <Grid Background="AntiqueWhite">
-                    <Image Source="../Pictures/Images/MusicShopLogo.png" Margin="5"/>
+                    <Image Source="../Pictures/Images/MusicShopLogo.png" Margin="6"/>
                 </Grid>
                 <GroupBox  Grid.Row="1" Grid.Column="0" VerticalAlignment="Top">
                     <StackPanel>
                     <TextBlock DockPanel.Dock="Left" Text="Author:" FontSize="20" Margin="5 0"/>
-                    <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding Genres}" DisplayMemberPath="Name" VerticalAlignment="Center" FontSize="20" SelectedItem="{Binding SelectedGenre}"/>
-
-                    <TextBlock DockPanel.Dock="Left" Text="Genre:" FontSize="20" Margin="5 0"/>
-                    <ComboBox x:Name="genresList"  Margin="5 10" ItemsSource="{Binding Genres}" DisplayMemberPath="Name"  FontSize="20" SelectedItem="{Binding SelectedGenre}"/>
+                    <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding Authors}" DisplayMemberPath="Name" VerticalAlignment="Center"
+                              FontSize="20" SelectedItem="{Binding SelectedAuthor}" />
 
                     <Button x:Name="searchButton" Content="Search" DockPanel.Dock="Right" Margin="4" FontSize="20" Style="{DynamicResource RoundButtonTemplate}"/>
                 </StackPanel>
@@ -41,19 +40,21 @@
                 <GroupBox Grid.Column="1">
                     <Label Content="Plates" FontSize="20" DockPanel.Dock="Top" VerticalAlignment="Bottom"/>
                 </GroupBox>
-                <GroupBox Grid.Row="1" Grid.Column="1" DataContext="{Binding SelectedPlate}">
-                    <DockPanel>
-                    <ListView x:Name="platesList"/>
-                </DockPanel>
+                <GroupBox Grid.Row="1" Grid.Column="1">
+                    <ListView x:Name="platesList" ItemsSource="{Binding Plates}" DataContext="{Binding SelectedPlate}"/>
                 </GroupBox>
                 <GroupBox Grid.Column="2">
-                    <Label Content="{Binding AdminName}"/>
+                    <Label Content="{Binding Name}"/>
                 </GroupBox>
                 <DockPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Top">
-                    <Button x:Name="addPlate" Content="Add plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"/>
-                    <Button x:Name="delPlate" Content="Delete plate" Style="{DynamicResource RoundButtonTemplate}"  DockPanel.Dock="Top"/>
-                    <Button x:Name="savePlate" Content="Save plate" Style="{DynamicResource RoundButtonTemplate}"  DockPanel.Dock="Top"/>
-                    <Image Source="../Pictures/Images/your_addHere.jpg"/>
+                    <Button x:Name="addPlate" Content="Add plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"
+                            Command="{Binding AddPlate}" CommandParameter="{Binding ElementName=SelectedAuthor}"/>
+                    <Button x:Name="delPlate" Content="Delete plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"
+                            Command="{Binding DeletePlate}"/>
+                    <Button x:Name="savePlate" Content="Save plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"/>
+                    <GroupBox>
+                        <Image Source="../Pictures/Images/your_addHere.jpg"/>
+                    </GroupBox>
                 </DockPanel>
             </Grid>
         </TabItem>
@@ -61,7 +62,7 @@
             <TabItem.Header>
                 <StackPanel Orientation="Horizontal">
                     <Image Source="../Pictures/Images/client.jpg" Width="20"/>
-                    <TextBlock Margin="3">Clients</TextBlock>
+                        <TextBlock Margin="3">Clients</TextBlock>
                 </StackPanel>
             </TabItem.Header>
             <Grid>
