--- a/MusicShop/App.xaml
+++ b/MusicShop/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="MusicShop.App"
+﻿  <Application x:Class="MusicShop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MusicShop"
-             StartupUri="Views/AdminWindow.xaml">
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
