fix: finally works

--- a/MusicShop/Views/MainWindow.xaml
+++ b/MusicShop/Views/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicShop"
-        xmlns:vm1="clr-namespace:MusicShop.ViewModels"
         mc:Ignorable="d"
         Title="Authorization" 
         Height="450" 
@@ -12,9 +11,9 @@
         x:Name="WinObj"
         Icon="../Pictures/Icons/loginIco.ico" >
 
-    <Window.DataContext>
-        <vm1:AccountViewModel />
-    </Window.DataContext>
+   <!--<Window.DataContext>
+        <vm2:AccountViewModel />
+    </Window.DataContext> -->
     
     <Window.Background>
         <ImageBrush ImageSource="../Pictures/Images/background.jpg" />
