--- a/MusicShop/Views/MainWindow.xaml
+++ b/MusicShop/Views/MainWindow.xaml
@@ -2,19 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MusicShop"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         mc:Ignorable="d"
         Title="Authorization" 
         Height="450" 
         Width="800" 
         x:Name="WinObj"
-        Icon="../Pictures/Icons/loginIco.ico" >
+        Icon="../Pictures/Icons/loginIco.ico">
 
-   <!--<Window.DataContext>
-        <vm2:AccountViewModel />
-    </Window.DataContext> -->
-    
     <Window.Background>
         <ImageBrush ImageSource="../Pictures/Images/background.jpg" />
     </Window.Background>
@@ -127,7 +122,7 @@
                     Padding="10" Width="200" 
                     Content="Accept" 
                     Command="{Binding ExecLoginization}"
-                    />
+                    CommandParameter="{Binding AuthorisationWin}"/>
         </DockPanel>
         
     </Grid>
