--- a/MusicShop/Views/AdminWindow.xaml
+++ b/MusicShop/Views/AdminWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MusicShop.Views"
         mc:Ignorable="d"
-        Title="Admin" Height="750" Width="1200" MinHeight="500" MinWidth="700">
+        Title="Admin" Height="750" Width="1200" MinHeight="500" MinWidth="700"
+        Loaded="Window_Loaded">
     <TabControl>
         <TabItem>
             <TabItem.Header>
@@ -30,8 +31,8 @@
                 <GroupBox  Grid.Row="1" Grid.Column="0" VerticalAlignment="Top">
                     <StackPanel>
                     <TextBlock DockPanel.Dock="Left" Text="Author:" FontSize="20" Margin="5 0"/>
-                    <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding Authors}" DisplayMemberPath="Name" VerticalAlignment="Center"
-                              FontSize="20" SelectedItem="{Binding SelectedAuthor}" />
+                        <ComboBox x:Name="authorsList" Margin="5 10" ItemsSource="{Binding avm.Authors}" DisplayMemberPath="Name" VerticalAlignment="Center"
+                              FontSize="20" SelectedItem="{Binding avm.SelectedAuthor}"/>
 
                     <Button x:Name="searchButton" Content="Search" DockPanel.Dock="Right" Margin="4" FontSize="20" Style="{DynamicResource RoundButtonTemplate}"/>
                 </StackPanel>
@@ -40,10 +41,10 @@
                     <Label Content="Plates" FontSize="20" DockPanel.Dock="Top" VerticalAlignment="Bottom"/>
                 </GroupBox>
                 <GroupBox Grid.Row="1" Grid.Column="1">
-                    <ListView x:Name="platesList" ItemsSource="{Binding Plates}" DataContext="{Binding SelectedPlate}"/>
+                    <ListView x:Name="platesList" ItemsSource="{Binding pwm.Plates}" DataContext="{Binding SelectedPlate}"/>
                 </GroupBox>
                 <GroupBox Grid.Column="2">
-                    <Label Content="{Binding Name}"/>
+                    <Label x:Name="adminNameLabel" Content="{Binding Name}"/>
                 </GroupBox>
                 <DockPanel Grid.Column="2" Grid.Row="1" VerticalAlignment="Top">
                     <Button x:Name="addPlate" Content="Add plate" Style="{DynamicResource RoundButtonTemplate}" DockPanel.Dock="Top"
